[project]
name = "comfyui-clear-screen"
description = "This is an Extension for ComfyUI, which adds a button, CLS, to clear the console window."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-clear-screen"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-clear-screen"
Icon = ""
