[project]
name = "comfyui-clear-screen"
description = "Adds a CLS button to clear the console"
version = "1.0.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-clear-screen"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Clear Screen"
Icon = ""
