[project]
name = "comfyui-clear-screen"
description = "Add a button that clears the console"
version = "1.1.0"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-clear-screen"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Clear Screen"
Icon = ""
